Bug 253952 - Entering attendee address failed: Switching letters
Summary: Entering attendee address failed: Switching letters
Status: CLOSED FIXED
Alias: None
Product: KOrganizer Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Maemo 5 Linux
: NOR major
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-12 12:46 UTC by Ludwig Reiter
Modified: 2010-10-13 19:25 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ludwig Reiter 2010-10-12 12:46:14 UTC
Version:           unspecified (using Devel) 
OS:                Linux

version: 4.5 20101008.1183810-1maemo1.1182955 enterprise5

Reproducible: Always

Steps to Reproduce:
1. Start to create an event.
2. Switch to the attendee dialog.
3. try to enter an attendee address.

Actual Results:  
letters switch and entering the correct address is nearly impossible.

Expected Results:  
what I type, should be used, no small-->BIG changes no r-->4 hanges...
Comment 1 Volker Krause 2010-10-12 15:51:59 UTC
SVN commit 1185186 by vkrause:

Fix stupid logic error, --disable-opengl should disable OpenGL, not enable it...

BUG: 253952


 M  +1 -1      calendar/korganizer-mobile.sh  
 M  +2 -2      lib/kdeclarativefullscreenview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1185186
Comment 2 Felix Wolfsteller 2010-10-13 19:25:22 UTC
Confirming fix, version 4:4.5~20101013.1185493-1maemo1.1185177 .