Fix stupid logic error, --disable-opengl should disable OpenGL, not enable it...

BUG: 253952

svn path=/trunk/KDE/kdepim/mobile/; revision=1185186